--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,6 +1,8 @@
 [package]
-name = "starknet_forge_template"
+name = "pitchlake_starknet"
+description = "Oiler PitchLake"
 version = "0.1.0"
+cairo-version = "2.1.0"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest
 
