--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pitchlake_starknet"
+name = "pitch_lake_starknet"
 description = "Oiler PitchLake"
 version = "0.1.0"
 cairo-version = "2.1.0"
