--- a/Scarb.toml
+++ b/Scarb.toml
@@ -2,7 +2,7 @@
 name = "pitch_lake_starknet"
 description = "Oiler PitchLake"
 version = "0.1.0"
-cairo-version = "2.1.0"
+cairo-version = "2.2.0"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest
 
@@ -12,6 +12,7 @@ casm = true
 
 [dependencies]
 starknet = "2.1.0"
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.7.0-rc.0" }
 
 [tool.snforge]
 # exit_first = true
