fixing yaml file

--- a/.github/workflows/run_scripts.yaml
+++ b/.github/workflows/run_scripts.yaml
@@ -31,8 +31,8 @@ jobs:
           node-version: "20.x"
 
       # Install Node dependencies
-      - name: Install dependencies
-        run: npm install
+      # - name: Install dependencies
+      #   run: npm install
 
       # Set up Scarb
       - uses: software-mansion/setup-scarb@v1
