--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,13 +4,19 @@ name: Tests
 on:
   push:
     branches:
-      - "**"
+      - main
+      - develop
   pull_request:
     branches:
       - "**"
+    types:
+      - reopened
+      - ready_for_review
+      - synchronize
 
 jobs:
   main:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,4 +30,3 @@ jobs:
       - name: Test the code
         run: |
           scarb test
-
