--- a/.github/workflows/run_scripts.yaml
+++ b/.github/workflows/run_scripts.yaml
@@ -1,6 +1,18 @@
 name: Run scripts
 
-on: pull_request
+on:
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
+    types:
+      - ready_for_review
+      - synchronize
+      - reopened
 
 jobs:
   run_scripts:
