--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,7 +2,8 @@
   "name": "pitchlake_starknet_ci",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "starknet": "^6.10.2"
+    "starknet": "^6.10.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.10"
