--- a/.github/workflows/rb_tree_tests.yaml
+++ b/.github/workflows/rb_tree_tests.yaml
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
     branches:
-      - "**"
+      - main
     types:
       - reopened
       - ready_for_review
