--- a/.github/workflows/run_scripts.yaml
+++ b/.github/workflows/run_scripts.yaml
@@ -34,7 +34,7 @@ jobs:
           sudo mv /home/runner/.config/.dojo/bin/katana /usr/local/bin/
 
       - name: Make script executable
-        run: chmod +x scripts/katana.sh
+        run: chmod +x scripts/smokeTests.sh
 
       # Set up Node
       - name: Set up Node
@@ -56,4 +56,4 @@ jobs:
         env:
           KATANA_ACCOUNT_ADDRESS: ${{ secrets.KATANA_ACCOUNT_ADDRESS }}
           KATANA_PRIVATE_KEY: ${{ secrets.KATANA_PRIVATE_KEY }}
-        run: bash scripts/katana.sh
+        run: bash scripts/smokeTests.sh
