testing conditionally for result

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,12 @@ jobs:
           # Echo the entire output (optional, for debugging purposes)
           echo "$output"
 
-          # Filter and echo the specific part of the output you are interested in
-          echo "$output" | grep -E "Error: test result: FAILED. [0-9]+ passed; [0-9]+ failed; [0-9]+ ignored"
+          # Check if there were any failed tests
+          if echo "$output" | grep -q "test result: ok"; then
+            echo "All tests passed!"
+            exit 0
+          else
+            echo "Some tests failed"
+            exit 1
+          fi
 
