--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Test the code
         run: |
           # Run the test and capture the output
-          output=$(scarb test)
+          output=$(scarb test 2>&1) || true
 
           # Echo the entire output (optional, for debugging purposes)
           echo "$output"
