--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,18 +1,18 @@
 [package]
-name = "pitch_lake_starknet"
+name = "pitch_lake"
 description = "Oiler PitchLake"
 version = "0.1.0"
-cairo-version = "2.2.0"
-
-# See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest
 
 [[target.starknet-contract]]
 sierra = true
 casm = true
 
 [dependencies]
-starknet = "2.1.0"
-openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.11.0" }
+starknet = "2.8.2"
+openzeppelin_token = "0.16.0"
+openzeppelin_utils = "0.16.0"
+
+[dev-dependencies]
+cairo_test = "2.8.2"
 
 [tool.snforge]
-# exit_first = true
