added deployment docs

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ out/
 .env
 scripts/simulationData/simulationOutput/simulationResults*.json
 scripts/simulationData/simulationSheet*.json
+
+.starknet_accounts/starknet_open_zeppelin_accounts.json
