--- a/snfoundry.toml
+++ b/snfoundry.toml
@@ -1,5 +1,6 @@
 [sncast.default]
-#url = "http://127.0.0.1:5050/rpc"
-url = "https://free-rpc.nethermind.io/sepolia-juno"
+url = "http://127.0.0.1:5050/rpc"
+#url = "https://free-rpc.nethermind.io/sepolia-juno"
+network = "devnet"
 accounts-file = ".starknet_accounts/starknet_open_zeppelin_accounts.json"
-account = "user1" # replace if desired
+account = "user2" # replace if desired
