updated accounts for dev

--- a/argent/Scarb.toml
+++ b/argent/Scarb.toml
@@ -41,5 +41,5 @@ update-webauthn-dapp = "scarb --profile release build && cp target/release/*Arge
 url = "http://127.0.0.1:5050/rpc"
 #url = "https://free-rpc.nethermind.io/sepolia-juno"
 network = "devnet"
-accounts-file = ".starknet_accounts/starknet_open_zeppelin_accounts.json"
-account = "user2" # replace i]
+accounts-file = ".starknet_accounts/starknet_accounts.json"
+account = "user1"
