--- a/snfoundry.toml
+++ b/snfoundry.toml
@@ -1,12 +1,12 @@
-[sncast.default]
-url = "http://127.0.0.1:6060"
-network = "juno"
-accounts-file = ".starknet_accounts/starknet_accounts.json"
-account = "user1"
-
-
 #[sncast.default]
-#url = "http://127.0.0.1:5050/rpc"
-#network = "devnet"
+#url = "http://127.0.0.1:6060"
+#network = "juno"
 #accounts-file = ".starknet_accounts/starknet_accounts.json"
 #account = "user1"
+
+
+[sncast.default]
+url = "http://127.0.0.1:5050/rpc"
+network = "devnet"
+accounts-file = ".starknet_accounts/starknet_accounts.json"
+account = "user1"
