--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,6 @@ services:
         - SIGNER_ADDRESS=${SIGNER_ADDRESS}
         - FOSSIL_PROCESSOR_ADDRESS=${FOSSIL_PROCESSOR_ADDRESS}
         - VAULT_ROUND_DURATION=${VAULT_ROUND_DURATION}
+        - ARGENT_ADDRESS=${ARGENT_WALLET_ADDRESS}
+        - ARGENT_SALT=${ARGENT_WALLET_SALT}
+        - ARGENT_CONSTRUCTOR_ARG1=${ARGENT_WALLET_CONSTRUCTOR_ARG1}
