--- a/snfoundry.toml
+++ b/snfoundry.toml
@@ -12,8 +12,10 @@
 #   account = "user1"
 
 [sncast.default]
-url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
-network = "alpha-sepolia"
+#url = "http://localhost:6060"
+#url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+url = "http://localhost:6060/rpc"
+network = "juno"
 accounts-file = ".starknet_accounts/starknet_accounts.json"
 account = "user1"
 
