update env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   pitchlake_starknet:
@@ -9,7 +9,8 @@ services:
         - DEVNET_RPC=${DEVNET_RPC}
         - SIGNER_ADDRESS=${SIGNER_ADDRESS}
         - FOSSIL_PROCESSOR_ADDRESS=${FOSSIL_PROCESSOR_ADDRESS}
-        - VAULT_ROUND_DURATION=${VAULT_ROUND_DURATION}
+        - VAULT_ALPHA=${VAULT_ALPHA}
+        - VAULT_STRIKE=${VAULT_STRIKE}
         - ARGENT_ADDRESS=${ARGENT_WALLET_ADDRESS}
         - ARGENT_SALT=${ARGENT_WALLET_SALT}
         - ARGENT_CONSTRUCTOR_ARG1=${ARGENT_WALLET_CONSTRUCTOR_ARG1}
