added new constructor args to docker/launcer setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
         - FOSSIL_PROCESSOR_ADDRESS=${FOSSIL_PROCESSOR_ADDRESS}
         - VAULT_ALPHA=${VAULT_ALPHA}
         - VAULT_STRIKE=${VAULT_STRIKE}
+        - ROUND_TRANSITION_DURATION=${ROUND_TRANSITION_DURATION}
+        - AUCTION_DURATION=${AUCTION_DURATION}
+        - ROUND_DURATION=${ROUND_DURATION}
         - ARGENT_ADDRESS=${ARGENT_WALLET_ADDRESS}
         - ARGENT_SALT=${ARGENT_WALLET_SALT}
         - ARGENT_CONSTRUCTOR_ARG1=${ARGENT_WALLET_CONSTRUCTOR_ARG1}
