rename env var: SIGNER -> DEPLOYER

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       context: .
     environment:
       STARKNET_PRIVATE_KEY: ${PITCHLAKE_DEPLOYER_PRIVATE_KEY}
-      STARKNET_RPC: ${DEVNET_RPC}
-      SIGNER_ADDRESS: ${PITCHLAKE_DEPLOYER_ADDRESS}
+      STARKNET_RPC: ${RPC}
+      DEPLOYER_ADDRESS: ${PITCHLAKE_DEPLOYER_ADDRESS}
       FOSSIL_PROCESSOR_ADDRESS: ${FOSSIL_ADDRESS}
       VAULT_ALPHA: ${VAULT_ALPHA}
       VAULT_STRIKE: ${VAULT_STRIKE}
