--- a/Scarb.toml
+++ b/Scarb.toml
@@ -11,6 +11,8 @@ casm = true
 starknet = "2.8.4"
 openzeppelin_token = "0.18.0"
 openzeppelin_utils = "0.18.0"
+openzeppelin_access = "0.18.0"
+fp = "0.1.4"
 #snforge_std = "0.31.0"
 
 [dev-dependencies]
