--- a/Scarb.toml
+++ b/Scarb.toml
@@ -2,19 +2,23 @@
 name = "pitch_lake"
 description = "Oiler PitchLake"
 version = "0.1.0"
+edition = "2023_11"
 
 [[target.starknet-contract]]
 sierra = true
 casm = true
 
 [dependencies]
-starknet = "2.8.4"
-openzeppelin_token = "0.18.0"
-openzeppelin_utils = "0.18.0"
-openzeppelin_access = "0.18.0"
+starknet = "2.12.1"
+openzeppelin_token = "2.0.0"
+openzeppelin_utils = "2.0.0"
+openzeppelin_access = "2.0.0"
 fp = "0.1.4"
 #snforge_std = "0.31.0"
 
 [dev-dependencies]
-cairo_test = "2.8.4"
+cairo_test = "2.12.1"
 #snforge_std = "0.32.0"
+
+[tool.fmt]
+sort-module-level-items = true
